<resources>
    <string name="app_name">LifeInputMethod2</string>
    <string name="search">Search</string>
    <string name="switch_number">123</string>
    <string name="symbols">符</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_zero">0</string>
    <string name="key_dot">.</string>
    <string name="key_space">space</string>
    <string name="key_alphabet">ABC</string>
    <string name="key_delete">Del</string>
    <string name="key_at">\@</string>
    <string name="key_multiply">x</string>
    <string name="key_add">+</string>
    <string name="key_sub">-</string>
    <string name="key_division">/</string>

</resources>