<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/keyboard_background_color"
    android:orientation="vertical"
    android:padding="2dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="工具栏"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/key_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_add"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_sub"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_sub"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_multiply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_multiply"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_division"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_division"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/key_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_one"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_two"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_three"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/key_four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_four"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_five"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_six"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/key_seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_seven"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_eight"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_nine"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/key_switch_qwerty"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_alphabet"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:text="@string/key_zero"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/key_space"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/key_background"
                    android:textColor="@drawable/key_text_color_selector"
                    android:padding="0dp"
                    android:textSize="16sp"
                    android:text="@string/key_space" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/key_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_delete"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_dot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_dot"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/function_key_background"
                android:textColor="@drawable/key_text_color_selector"
                android:padding="0dp"
                android:text="@string/key_at"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/search_key_background"
                android:textColor="@drawable/search_key_text_color_selector"
                android:padding="0dp"
                android:text="@string/search"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
